Many many improvements